SP Screen ResDev (Partial)/src/objects/Address_Validator__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address Validator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AV-{00000000}</displayFormat>
        <label>Address Validator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Validators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>